# grpc_graphql_gateway

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FEDERATION.md  LICENSE  README.md  SECURITY.md  benchmark.sh  build-docker.sh  build.rs  docker-compose.federation.yml  package-lock.json  test-federation.sh  test_security.sh  test_waf_security.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml  docs.yml
docs/: book.toml  changelog.md  defer.md
docs/design/: gbp_federation_router.md
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: dos-protection.md  health-checks.md  introspection.md  live-queries.md  metrics.md  middleware.md  openapi.md  query-cost-analysis.md  rest-connectors.md  tracing.md
docs/src/core/: field-control.md  file-uploads.md  multi-descriptor.md  operations.md  plugins.md
docs/src/federation/: apollo-router.md  directives.md  entities.md  entity-resolution.md  extending-entities.md  graphos.md  overview.md
docs/src/getting-started/: generating-descriptors.md  installation.md  quick-start.md
docs/src/performance/: apq.md  batch-queries.md  caching.md  circuit-breaker.md  compression.md  dataloader.md  gbp-compression.md  high-performance.md  lz4-compression.md  request-collapsing.md  smart-ttl-integration.md  smart-ttl.md
docs/src/production/: autoscaling.md  configuration.md  cost-analysis.md  cost-optimization-strategies.md  cost-reduction-features.md  graceful-shutdown.md  header-propagation.md  helm-deployment.md  query-whitelisting.md  scalability-analysis.md  security-checklist.md
docs/src/reference/: api.md  changelog.md  contributing.md
docs/src/security/: authentication.md  authorization.md  dos-protection.md  mtls.md  query-whitelisting.md  security-headers.md  wasm-plugins.md
docs/theme/: custom.css  head.hbs
examples/: Dockerfile  Dockerfile.federation  allowed_queries.json  binary_protocol_client.rs  plugin_system.rs  router-quic-test.yaml  router.yaml  smart_ttl_cache.rs  test_router_live_query.js
examples/federation/: main.rs  router-config.yaml  supergraph-k8s.graphql  supergraph-k8s.yaml  supergraph.graphql
examples/frontend/: GbpDecoder.ts  package-lock.json  package.json  test_compression.ts  tsconfig.json
examples/graphql/: main.rs  supergraph.graphql  supergraph.yaml
examples/greeter/: jsonplaceholder.yaml  main.rs
examples/live_query/: VISUAL_GUIDE.md  advanced_features_example.rs  main.rs  package-lock.json  test_advanced_features.js  test_ws.js
examples/subgraphs/: subgraph-products.rs  subgraph-reviews.rs  subgraph-users.rs
helm/: README.md  deploy-federation.sh  router.yaml  validate-chart.sh  values-autoscaling-complete.yaml  values-federation-product.yaml  values-federation-review.yaml  values-federation-user.yaml
helm/grpc-graphql-gateway/: Chart.yaml  values.yaml
helm/grpc-graphql-gateway/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  loadbalancer.yaml  service.yaml  serviceaccount.yaml  vpa.yaml
proto/: federation_example.proto  graphql.proto  greeter.proto  live_query_example.proto
scripts/: test-quic.sh
src/: analytics.rs  analytics_dashboard.html  cache.rs  circuit_breaker.rs  compression.rs  dataloader.rs  defer.rs  error.rs  federation.rs  gateway.rs  gbp.rs  graphql.rs  grpc_client.rs  headers.rs  health.rs  high_performance.rs  lib.rs  live_query.rs  lz4_compression.rs  metrics.rs  middleware.rs  mtls.rs  openapi.rs  persisted_queries.rs  plugin.rs  query_cost_analyzer.rs  query_whitelist.rs  quic.rs  request_collapsing.rs  rest_connector.rs  runtime.rs  schema.rs  shutdown.rs  smart_ttl.rs  subscription.rs  subscription_federation.rs  tracing_otel.rs  types.rs  waf.rs  wasm_plugin.rs
src/router/: mod.rs  security_tests.rs
tests/: gbp_fuzz.proptest-regressions  gbp_fuzz.rs
