[package]
name = "grpc_graphql_gateway"
version = "0.4.0"
edition = "2021"
authors = ["Protocol Lattice"]
description = "A Rust implementation of gRPC-GraphQL gateway - generates GraphQL execution code from gRPC services"
license = "MIT"
repository = "https://github.com/Protocol-Lattice/grpc_graphql_gateway"
keywords = ["grpc", "graphql", "gateway", "protobuf", "api"]
categories = ["network-programming", "api-bindings", "web-programming"]
default-run = "greeter"

[dependencies]
# GraphQL
async-graphql = { version = "7.0", features = ["dynamic-schema", "dataloader", "boxed-trait"] }
async-graphql-axum = "7.0"

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
base64 = "0.22"

# Async
async-trait = "0.1"


# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
prost-types = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket support
tokio-tungstenite = "0.21"

# HTTP
http = "1.0"
hyper = { version = "1.0", features = ["full"] }

# Reflection
prost-reflect = "0.15"

# Rate Limiting
governor = "0.6"
nonzero_ext = "0.3"

# Metrics & Observability
prometheus = "0.13"
once_cell = "1.19"

# OpenTelemetry / Distributed Tracing
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", optional = true }
tracing-opentelemetry = "0.22"

# Automatic Persisted Queries (APQ)
sha2 = "0.10"
hex = "0.4"

# UUID for request ID generation
uuid = { version = "1.0", features = ["v4"] }

# Security - non-poisoning locks
parking_lot = "0.12"

# REST API Connector
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
urlencoding = "2.1"


# Redis for distributed caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# High-performance JSON parsing (SIMD-accelerated)
simd-json = "0.14"

# Lock-free data structures for high concurrency
crossbeam = "0.8"
crossbeam-skiplist = "0.1"

# Fast memory allocator
mimalloc = { version = "0.1", features = ["override"] }

# Zero-copy buffers
bytes = "1.5"

# High-performance connection pooling
bb8 = "0.8"

# CPU affinity for optimized thread placement (Linux only)
libc = "0.2"

# Faster hasher
ahash = "0.8"

# Object pooling
object-pool = "0.5"

# Fast random for benchmarks
fastrand = "2.0"

[features]
default = []
otlp = ["opentelemetry-otlp"]
yaml = ["serde_yaml"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"


[lib]
name = "grpc_graphql_gateway"
path = "src/lib.rs"
doctest = false

[[example]]
name = "greeter"
path = "examples/greeter/main.rs"

[[example]]
name = "federation"
path = "examples/federation/main.rs"

[[example]]
name = "graphql"
path = "examples/graphql/main.rs"


[[bin]]
name = "greeter"
path = "examples/greeter/main.rs"

[[bin]]
name = "federation"
path = "examples/federation/main.rs"

[[bin]]
name = "protoc-gen-graphql-template"
path = "src/bin/protoc-gen-graphql-template.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
